--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <section>
             <div class="sect-top">
                 <div class="left">
-                    <h3 class="title">Watch everywhere
+                    <h3 class="title">Enjoy on your TV
                     </h3>
-                    <p class="para">Stream unlimited movies and TV shows on your phone,tablet,laptop,and TV.</p>
+                    <p class="para">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
                 </div>
                 <div class="right">
                     <img src="./img/netflix02.png" alt="">
