--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
         <div class="footer-bottom">
             <div class="footer-lang">
-                <img src="/img/download.png" width="40px" alt="">
+                <img src="./img/download.png" width="40px" alt="">
                 <select name="" id="">
                     <option value="">English</option>
                     <option value="">Espanol</option>
